--- a/css/style.css
+++ b/css/style.css
@@ -450,7 +450,9 @@ Topbar
 
 #header .header-inner #logo, #header #header-wrap #logo { float: left; font-size: 28px; position: relative; z-index: 1; -webkit-transition: all .4s ease-in-out; transition: all .4s ease-in-out; height: 80px; }
 
-#header .header-inner #logo a > img, #header #header-wrap #logo a > img { vertical-align: inherit; -webkit-transition: all .4s ease-in-out; transition: all .4s ease-in-out; height: 80px; width: auto; }
+#header .header-inner #logo a .logo-default {height: 75px;}
+
+#header .header-inner #logo a > img, #header #header-wrap #logo a > img { vertical-align: inherit; -webkit-transition: all .4s ease-in-out; transition: all .4s ease-in-out; height: 130px; width: auto; }
 
 #header .header-inner #logo a > img, #header .header-inner #logo a [class*="logo-"], #header #header-wrap #logo a > img, #header #header-wrap #logo a [class*="logo-"] { display: none; }
 
@@ -6771,9 +6773,6 @@ section { padding: 80px 0; position: relative; width: 100%; overflow: hidden; z-
 #topbar {
   display: none;;
 }
-.hipocrates {
-  font-size: 10px !important;
-}
 }
 
 @media (max-width: 1199px) and (min-width: 990px) {
@@ -6858,4 +6857,3 @@ section { padding: 80px 0; position: relative; width: 100%; overflow: hidden; z-
     font-size: 2em !important;
   }
 }
-
