--- a/css/style.css
+++ b/css/style.css
@@ -6857,3 +6857,27 @@ section { padding: 80px 0; position: relative; width: 100%; overflow: hidden; z-
     font-size: 2em !important;
   }
 }
+
+@media (min-width: 992px) {
+  .margem-top {
+    margin-top: 50px;
+  }
+}
+
+@media (max-width: 1199px) and (min-width: 992px) {
+  .video-margin {
+    margin-top: -60px;
+  }
+}
+
+@media (max-width: 450px) {
+  .video-margin {
+    margin-top: -50px;
+  }
+}
+
+@media (max-width: 400px) {
+  .video-margin {
+    margin-top: -80px;
+  }
+}
