--- a/css/style.css
+++ b/css/style.css
@@ -6858,6 +6858,15 @@ section { padding: 80px 0; position: relative; width: 100%; overflow: hidden; z-
   }
 }
 
+@media (max-width: 992px) {
+  #header .header-inner #logo {
+    margin-top: 10px !important;
+  }
+  #topbar.topbar-transparent.dark {
+    display: none !important;
+  }
+}
+
 @media (min-width: 992px) {
   .margem-top {
     margin-top: 50px;
@@ -6873,6 +6882,9 @@ section { padding: 80px 0; position: relative; width: 100%; overflow: hidden; z-
 @media (max-width: 450px) {
   .video-margin {
     margin-top: -50px;
+  }
+  .padding-top {
+    margin-top: 0px !important;
   }
 }
 
