text-align testimonials

--- a/css/style.css
+++ b/css/style.css
@@ -6446,7 +6446,7 @@ body.breakpoint-xl .pricing-table .col-lg-2 .plan-list ul li, body.breakpoint-lg
 
 .testimonial .testimonial-item > img { border-radius: 50%; display: block; float: none; height: 72px; margin: 0 auto 10px; width: 72px; }
 
-.testimonial .testimonial-item > p { font-size: 15px; line-height: 22px; margin-bottom: 0; padding-bottom: 20px; font-weight: 400; margin-top: 10px; }
+.testimonial .testimonial-item > p { font-size: 15px; line-height: 22px; margin-bottom: 0; padding-bottom: 20px; font-weight: 400; margin-top: 10px; text-align: center !important; }
 
 .testimonial .testimonial-item > span { font-weight: 600; font-size: 15px; display: block; line-height: 22px; }
 
